--- a/iOSDemo/ObjectiveC/Xcalendar/XYCalendar/LXCalendar/LXCalenderCell.xib
+++ b/iOSDemo/ObjectiveC/Xcalendar/XYCalendar/LXCalendar/LXCalenderCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,7 +21,7 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xOI-6P-0pf">
-                        <rect key="frame" x="10.5" y="11" width="30" height="30"/>
+                        <rect key="frame" x="10.5" y="10" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="xOI-6P-0pf" secondAttribute="height" id="Qd1-pP-TY9"/>
                         </constraints>
@@ -29,6 +29,19 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LwG-Dd-kfx">
+                        <rect key="frame" x="23" y="40" width="4" height="4"/>
+                        <color key="backgroundColor" red="0.98039215690000003" green="0.1927248094" blue="0.10324374009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="4" id="oRU-F0-4u4"/>
+                            <constraint firstAttribute="width" constant="4" id="tCg-0p-cFO"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -36,9 +49,12 @@
                 <constraint firstItem="xOI-6P-0pf" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="DQi-04-6OM"/>
                 <constraint firstItem="xOI-6P-0pf" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.6" id="FTJ-jQ-nRj"/>
                 <constraint firstItem="xOI-6P-0pf" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="UjK-d3-x6H"/>
+                <constraint firstItem="LwG-Dd-kfx" firstAttribute="top" secondItem="xOI-6P-0pf" secondAttribute="bottom" id="qS9-Tt-d9D"/>
+                <constraint firstItem="LwG-Dd-kfx" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="xL1-y0-VHI"/>
             </constraints>
             <connections>
                 <outlet property="label" destination="xOI-6P-0pf" id="ueO-iu-YcE"/>
+                <outlet property="markView" destination="LwG-Dd-kfx" id="eXh-ha-96V"/>
             </connections>
         </collectionViewCell>
     </objects>
