--- a/iOSDemo/iOSDemo/Base.lproj/Main.storyboard
+++ b/iOSDemo/iOSDemo/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -35,6 +36,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="Lrl-kF-Kap">
+                            <rect key="frame" x="0.0" y="72" width="375" height="242"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tU5-h6-zOF">
+                                    <rect key="frame" x="48" y="23" width="275" height="71"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" red="1" green="0.28903537330000001" blue="0.2885742188" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <state key="normal" title="日历"/>
+                                    <connections>
+                                        <action selector="footButtonAction:" destination="rpu-6N-5vr" eventType="touchUpInside" id="RVw-Ut-85k"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dvk-AN-5U1">
+                                    <rect key="frame" x="144" y="146" width="83" height="61"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="pop"/>
+                                    <connections>
+                                        <action selector="popButtonAction:" destination="rpu-6N-5vr" eventType="touchUpInside" id="kfr-n6-dLq"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="objectccell" id="9Vg-UR-tA0">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -54,7 +79,88 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hLD-pz-pFJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1748" y="-788"/>
+            <point key="canvasLocation" x="1748" y="-788.45577211394311"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="QzW-Ml-Drf">
+            <objects>
+                <viewController id="XxU-aY-6mY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YMd-8i-Xks">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tws-h7-cSc">
+                                <rect key="frame" x="0.0" y="20" width="68" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="68" id="nqx-WB-nlv"/>
+                                    <constraint firstAttribute="height" constant="200" id="t0d-4L-azs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wPH-Wn-267">
+                                <rect key="frame" x="68" y="20" width="307" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="bsd-GB-l7z"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <searchBar contentMode="redraw" fixedFrame="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="00u-Wm-hVk">
+                                <rect key="frame" x="0.0" y="433" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="wPH-Wn-267" firstAttribute="top" secondItem="vbk-I4-wnx" secondAttribute="top" id="L18-Hu-enb"/>
+                            <constraint firstItem="wPH-Wn-267" firstAttribute="leading" secondItem="Tws-h7-cSc" secondAttribute="trailing" id="cwA-6b-rt4"/>
+                            <constraint firstItem="Tws-h7-cSc" firstAttribute="leading" secondItem="vbk-I4-wnx" secondAttribute="leading" id="fQp-nh-HeE"/>
+                            <constraint firstItem="vbk-I4-wnx" firstAttribute="trailing" secondItem="wPH-Wn-267" secondAttribute="trailing" id="gLk-Gi-7qC"/>
+                            <constraint firstItem="Tws-h7-cSc" firstAttribute="top" secondItem="vbk-I4-wnx" secondAttribute="top" id="kh2-bW-tHW"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="vbk-I4-wnx"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="geu-xf-ZlN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2554.4000000000001" y="-778.56071964017997"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="2dp-jh-Udn">
+            <objects>
+                <viewController id="eyP-af-wkW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ua8-7V-ajs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="DRu-ZW-wfd">
+                                <rect key="frame" x="0.0" y="342" width="262" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <date key="date" timeIntervalSinceReferenceDate="559558205.77617204">
+                                    <!--2018-09-25 08:50:05 +0000-->
+                                </date>
+                                <locale key="locale" localeIdentifier="zh-Hans"/>
+                            </datePicker>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="QnO-s2-nxh">
+                                <rect key="frame" x="129" y="146" width="172" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <date key="date" timeIntervalSinceReferenceDate="559558228.68022597">
+                                    <!--2018-09-25 08:50:28 +0000-->
+                                </date>
+                                <locale key="locale" localeIdentifier="zh_CN"/>
+                            </datePicker>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Y6a-yi-c9x"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H92-cg-C3X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2277.5999999999999" y="-66.11694152923539"/>
         </scene>
         <!--Swift-->
         <scene sceneID="uFm-Jv-uii">
