--- a/iOSDemo/iOSDemo/Base.lproj/Main.storyboard
+++ b/iOSDemo/iOSDemo/Base.lproj/Main.storyboard
@@ -51,12 +51,20 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oWp-8X-5Po">
+                                <rect key="frame" x="36" y="178" width="142" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="plF-96-uh5"/>
                     </view>
                     <navigationItem key="navigationItem" id="vsB-2k-OKJ"/>
                     <connections>
+                        <outlet property="sting2Field" destination="oWp-8X-5Po" id="KmG-Ll-qIt"/>
                         <outlet property="stringField" destination="acU-dl-3Nl" id="A1D-d3-GJa"/>
                     </connections>
                 </viewController>
@@ -260,7 +268,7 @@
         <!--Swift-->
         <scene sceneID="uFm-Jv-uii">
             <objects>
-                <tableViewController title="Swift" id="9JN-Ge-BiV" customClass="SwiftTableController" customModule="iOSDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Swift" hidesBottomBarWhenPushed="YES" id="9JN-Ge-BiV" customClass="SwiftTableController" customModule="iOSDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="FkO-00-Clo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -281,10 +289,28 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Swift" id="unz-T6-txw"/>
+                    <connections>
+                        <segue destination="4jB-FU-ltb" kind="show" identifier="SwiftBlocksViewController" id="jjS-9A-wlz"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bha-2T-a6g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2153" y="627"/>
+        </scene>
+        <!--Swift Blocks View Controller-->
+        <scene sceneID="6NP-cY-64q">
+            <objects>
+                <viewController id="4jB-FU-ltb" customClass="SwiftBlocksViewController" customModule="iOSDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mEW-ju-mtW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="JGM-AO-55q"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lhq-WB-GDn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2993" y="634"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aZM-09-WbQ">
@@ -308,8 +334,8 @@
             <objects>
                 <navigationController title="OC" id="ndx-QJ-vSq" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" badgeValue="99" systemItem="mostViewed" id="frc-go-sxr"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nyC-bY-5Yw">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="nyC-bY-5Yw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
